--- a/words.html
+++ b/words.html
@@ -343,7 +343,7 @@ Pick your first, <i>real</i> move. <b>Choose wisely.</b> -->
 </p>
 
 <p id="character_tft">
-<b>میمون مقلد:</b>
+<b>مقلد:</b>
 <!-- Hello! I start with Cooperate, and afterwards, I just copy whatever you did in the last round. Meow -->
 سلام! من با همکاری شروع می‌کنم، بعد از آن هرکاری که تو بکنی، من هم تکرار می‌کنم. 
 </p>
@@ -371,7 +371,7 @@ but if y'all ever cheat me, I'LL CHEAT YOU BACK 'TIL THE END OF TARNATION. -->
 If you cheat back, I'll act like <span class="tft">Copycat</span>.
 If you never cheat back, I'll act like <span class="all_d">Always Cheat</span>, to exploit you.
 Elementary, my dear Watson. -->
-من اول تو را تحلیل می‌کنم. شروع من اینطوری است: همکاری، تقلب، همکاری، همکاری. اگر تقلب کنی، میمون صفت می‌شوم. اما اگر اصلا تقلب نکنی، مثل همیشه متقلب ازت سوء استفاده می‌کنم. به همین سادگی!
+من اول تو را تحلیل می‌کنم. شروع من اینطوری است: همکاری، تقلب، همکاری، همکاری. اگر تقلب کنی، مقلد میمون صفت می‌شوم. اما اگر اصلا تقلب نکنی، مثل همیشه متقلب ازت سوء استفاده می‌کنم. به همین سادگی!
 </p>
 
 <p id="characters_teaser">
@@ -490,7 +490,7 @@ you have to face the same <i>specific soldiers</i> every day.
 </p>
 
 <p id="tournament_winner_1">
-<b class="tft"> میمون مقلد است!</b>
+<b class="tft">مقلد است!</b>
 </p>
 <p id="tournament_winner_2_yay">
 تبریک، روی اسب درست شرط بستی.
@@ -509,13 +509,13 @@ same <i>specific people</i> (not just the same generic "enemy") over and over ag
 -->
 
 
-<span class="tft">میمون مقلد</span> 
+<span class="tft">مقلد</span> 
 نامهای فراوانی دارد. 
 قانون طلایی، فداکاری متقابل، چشم در برابر چشم، یا ...
 <b>زندگی کن و بگذار زندگی کنند.</b>
 برای همین بود که در جنگ جهان اول، در جنگ سنگر به سنگر صلح پدیدار شد. 
 وقتی که مجبوری همان بازی را با همان فرد خاص بارها و بارها تکرار کنی،
-<span class="tft">میمون مقلد</span> 
+<span class="tft">مقلد</span> 
 فقط برنده نبرد نیست، برنده جنگ است. 
 
 
@@ -596,7 +596,7 @@ Let's make another bet! Who do you think will win the <i>first</i> tournament?
 بیایید با این جمعیت شروع کنیم:
 <span class="all_c">۱۵ معصوم</span>,
 <span class="all_d">۵ همیشه متقلب</span>, and
-<span class="tft">۵ میمون مقلد</span>.
+<span class="tft">۵ مقلد</span>.
 (فعلاً از
 <span class="grudge">کینه‌ای</span> &amp; <span class="prober">کاراگاه</span> 
 صرف نظر می‌کنیم)
@@ -625,7 +625,7 @@ Let's make another bet! Who do you think will win the <i>first</i> tournament?
 </p>
 <p id="evo_2_tft">
 به نظر منطقی می‌رسد،
-<span class="tft">میمون مقلد</span> 
+<span class="tft">مقلد</span> 
 دفعه پیش برنده بود، چرا این دفعه نباشد؟ ...
 </p>
 <p id="evo_2">
@@ -657,7 +657,7 @@ Let's make another bet! Who do you think will win the <i>first</i> tournament?
 </p>
 <p id="evo_3_tft">
 عجب!
-<span class="tft">میمون مقلد</span> 
+<span class="tft">مقلد</span> 
 برنده نشد، اما به بدی 
 <span class="all_c">معصومین</span>
 هم نبود که توسط 
@@ -695,7 +695,7 @@ who <i>are</i> nice, but not naive. -->
 به موفقیت رسیدند. وقتی که دیگر 
 <span class="all_c">معصومی</span>
 نماند، مجبور می‌شوند که با 
-<span class="tft">میمون‌های مقلد</span>
+<span class="tft">مقلدین</span>
 رو به رو شوند،‌ که مهربان هستند، اما ابله نیستند.
 </p>
 
@@ -707,12 +707,12 @@ Not only that, but it also means <span class="tft">Copycat</span>
 can give <span class="all_d">Always Cheat</span>
 a taste of their own medicine. -->
 تنها با تقلید از بازیکن مقابل،
-<span class="tft">میمون‌های مقلد</span> 
+<span class="tft">مقلدین</span> 
 توانستند که با یکدیگر مهربان باشند، اما 
 <span class="all_d">همیشه متقلب‌ها</span> 
 به خودشان هم رحم نکردند.
 علاوه بر این 
-<span class="tft">میمون‌‌های مقلد</span>
+<span class="tft">مقلدین</span>
 حق 
 <span class="all_d">همیشه متقلب‌‌‌ها</span>
 را هم کف دستشان گذاشتند!
@@ -724,7 +724,7 @@ a taste of their own medicine. -->
 
 <p id="evo_9">
 ...
-<span class="tft">میمون‌های مقلد</span> 
+<span class="tft">مقلدین</span> 
 وارث زمین هستند!
 </p>
 <p id="evo_9_all_c">
@@ -754,7 +754,7 @@ but in the end, its exploitativeness was its downfall. -->
 but its exploitativeness was its downfall. -->
 
 در بلند مدت حق با تو بود و 
-<span class="tft">میمون مقلد</span> 
+<span class="tft">مقلدین</span> 
 برنده شد!
 <span class="all_d">همیشه متقلب</span> چند دور اول را خوب آمد,
 اما در انتها، سوء استفاده چی بودن به زمین کوبدشان.
@@ -802,7 +802,7 @@ are eliminated, the two tie.) -->
 ممکن است باقی بمانند، برای اینکه وقتی همه به جز 
 <span class="grudge">‌‌کینه‌ای‌ها</span> 
 و
-<span class="tft">میمون‌های مقلد</span> 
+<span class="tft">مقلدین</span> 
 از بین بروند، این دوتا با هم مساوی می‌کنند.
 <br><br>
 <!-- So, it seems the math of game theory is telling us something:
@@ -832,7 +832,7 @@ why, then, are there so many un-trusting, un-trustworthy people?
 What's causing our epidemic of un-trust?
 -->
 اگر در یک بازی مکرر استراتژی 
-<span class="tft">میمون مقلد</span>
+<span class="tft">مقلد</span>
 اینقدر موثر و موفق است، به طوریکه حتی در جنگ جهانی اول سنگرها به طور مستقل به استراتژی مشابه «زندگی کن و بگذار زندگی کنند» رسیدند،
 پس چرا اینقدر آدمهای بی اعتماد و غیر قابل اطمینان داریم؟
 چه چیزی بی اعتمادی را فراگیر کرده است؟
@@ -869,12 +869,12 @@ except for one <span class="all_d">Always Cheat</span> and one <span class="tft"
 -->
 قبل از اینکه همه چیز به فلاکت منتهی شود، بیایید یک آغاز خوب داشته باشیم!
 این دنیایی است که تماماً با 
-<span class="all_c">Always Cooperates</span>
+<span class="all_c">معصومین</span>
 پر شده، به جز یک 
-<span class="all_d">Always Cheat</span> 
+<span class="all_d">همیشه متقلب</span> 
 
 و یک
-<span class="tft">Copycat</span>.
+<span class="tft">مقلد</span>.
 <br><br>
 
 <!-- Use the buttons on the right to <b>START</b> the sim,
@@ -887,7 +887,7 @@ go through it <b>step-by-step</b>, or <b>reset</b> it. &rarr; -->
 <!-- As you already know, <span class="tft">Copycat</span> wins handily in the long run,
 under our current rules! -->
 همانطور که می‌دانید، بر طبق قوانین جاری، 
-<span class="tft">Copycat</span> 
+<span class="tft">مقلد</span> 
 در بلند مدت برنده مطلق است.
 <br><br>
 <!-- But that's under our <i>current</i> rules, which say that
@@ -895,7 +895,7 @@ players play against each other for <i>10</i> rounds per match.
 Does <span class="tft">Copycat</span> still win at 7 rounds? 5 rounds? 3? 2? 1? -->
 بر طبق قوانین جاری، در هر مسابقه بازیکن‌ها ۱۰ دور با هم بازی می‌کنند. 
 اگر ۷ دور یا ۵ دور بازی کنند چطور؟ آیا باز هم
-<span class="tft">Copycat</span>
+<span class="tft">مقلد</span>
 برنده می‌شود؟ اگر ۳، ۲ و یا ۱ دور بازی کنند چطور؟
 <br><br>
 <!-- b>Change the number of rounds</b> with the slider below,
@@ -934,7 +934,7 @@ and oh, it gets worse... &rarr; -->
 
 همانطور که دیدید، اگر تعداد دورهای هر مسابقه کم باشد (در اینجا ۵ و یا کمتر)، 
 
-<span class="all_d">ALWAYS CHEAT</span> 
+<span class="all_d">همیشه متقلب</span> 
 برنده می‌شود. 
 <br><br>
 در سال ۱۹۸۵ وقتی که از آمریکایی‌ها پرسیده شد که چندتا دوست صمیمی دارند، رایج‌ترین پاسخ سه بود. 
@@ -979,7 +979,7 @@ Even though +1 is still <i>more</i> than the punishment for both cheating (0)...
 what happens? -->
 
 با پرداخت‌های قبلی، 
-<span class="tft">Copycat</span> 
+<span class="tft">مقلد</span> 
 برنده می‌شود. اما اگر 
 <b>
 پاداش همکاری را از ۲+ به ۱+ کاهش دهیم
@@ -1016,7 +1016,7 @@ let's now look at our third &amp; final barrier to the evolution of trust... -->
 
 همان اتفاق تکرار می‌شود:
 با پاداش برد-برد کمتر،
-<span class="all_d">Always Cheat</span> 
+<span class="all_d">همیشه متقلب</span> 
 پیروز است.
 نظریه بازی دو پیام مهم برای ما دارد:
 <br><br>
@@ -1053,9 +1053,9 @@ let's now look at our third &amp; final barrier to the evolution of trust... -->
 To understand the problem, let's say two <span class="tft">Copycats</span> are playing against each other:-->
 
 با وجود اینکه استراتژی
-<span class="tft">Copycat</span> 
+<span class="tft">مقلد</span> 
 خیلی خوب و موفق و باحال است، یک ایراد اساسی دارد که تا حالا از آن صحبتی نکردیم. برای اینکه صورت مسئله را بهتر درک کنیم، بیایید فرض کنیم که دو 
-<span class="tft">Copycats</span> 
+<span class="tft">مقلدین</span> 
 داریم که بر علیه یک دیگر بازی می‌کنند. 
 </p>
 <p id="noise_1_end">
@@ -1095,7 +1095,7 @@ The other player, being a <span class="tft">Copycat</span>, <i>had</i> to retali
 <b>حالت رو می‌گیرم!</b>
 <br>
 بازیکن دیگر که یک 
-<span class="tft">Copycat</span>, 
+<span class="tft">مقلد</span>, 
 است،
 <i>
 باید
@@ -1105,7 +1105,7 @@ The other player, being a <span class="tft">Copycat</span>, <i>had</i> to retali
 <p id="noise_4_end">
 <!-- ...and you, being a <span class="tft">Copycat</span> as well, will <i>also</i> have to retaliate... -->
 ... و تو هم که یک 
-<span class="tft">Copycat</span> 
+<span class="tft">مقلد</span> 
 هستی، 
 <i>باید</i> 
 تلافی کنی.
@@ -1116,7 +1116,7 @@ The other player, being a <span class="tft">Copycat</span>, <i>had</i> to retali
 these two <span class="tft">Copycats</span> will spiral into an endless cycle of vengeance...
 that started over a single mistake, long ago. -->
 و اینطوری می‌شود که دو 
-<span class="tft">Copycats</span>
+<span class="tft">مقلدین</span>
 یک اشتباه کوچک را تبدیل به یک چرخه بی پایان انتقام گیری می‌کنند.
 </p>
 <p id="noise_5_end">
@@ -1136,17 +1136,17 @@ that started over a single mistake, long ago. -->
 </p>
 
 <p id="character_tf2t">
-<b>COPYKITTEN:</b><br>
+<b>مقلد مهربان:</b><br>
 <!-- Hello! I'm like <span class="tft">Copycat</span>,
 except I Cheat back only after you Cheat me twice in a row.
 After all, the first one could be a mistake! Purrrrr -->
 سلام! من مثل 
-<span class="tft">Copycat</span> 
+<span class="tft">مقلد</span> 
 هستم، با این تفاوت که تنها وقتی تلافی می‌کنم که دوبار پشت سر هم به من خیانت کرده باشی. بار اول می‌تواند فقط یک بدشانسی بوده باشد. 
 </p>
 
 <p id="character_pavlov">
-<b>SIMPLETON:</b><br>
+<b>ساده:</b><br>
 <!-- hi i try start cooperate.
 if you cooperate back, i do <i>same thing</i> as last move, even if it mistake.
 if you cheat back, i do <i>opposite thing</i> as last move, even if it mistake. -->
@@ -1156,7 +1156,7 @@ if you cheat back, i do <i>opposite thing</i> as last move, even if it mistake. 
 </p>
 
 <p id="character_random">
-<b>RANDOM:</b><br>
+<b>شانسی:</b><br>
 <!-- i>Monkey robot! Ninja pizza tacos! lol i'm so random</i><br>
 (Just plays Cheat or Cooperate randomly with a 50/50 chance) -->
 من یک سکه می‌اندازم، اگر شیر آمد همکاری می‌کنم، اگر خط آمد، خیانت می‌کنم.
@@ -1185,20 +1185,20 @@ Who do you think will come out on top?
 <b>Think carefully, then PLACE YOUR BETS:</b -->
 
 بیایید با حدود یک جین 
-<span class="all_c">Always Cooperates</span>
+<span class="all_c">معصومین</span>
 در برابر قهرمان قدیمی‌مان
 
-<span class="tft">Copycat</span>
+<span class="tft">مقلد</span>
 و سه شخصیت جدید شروع کنیم:
 
-<span class="tf2t">Copykitten</span>
+<span class="tf2t">مقلد مهربان</span>
 بخشنده،
 ,
-<span class="pavlov">Simpleton</span>
+<span class="pavlov">ساده</span>
 حوصله سر بر، 
 و 
 
-<span class="random">Random</span>
+<span class="random">شانسی</span>
 احمق
 .
 <br><br>
@@ -1242,17 +1242,17 @@ since <span class="all_c">Always Cooperate</span> never retaliates,
 <i>it'll keep cheating them</i>.
 -->
 
-<span class="pavlov">Simpleton</span>
+<span class="pavlov">ساده</span>
 برند شد!
 برای اینکه 
-<span class="pavlov">Simpleton</span>
+<span class="pavlov">ساده</span>
 می‌تواند از 
-<span class="all_c">Always Cooperate</span>
+<span class="all_c">معصوم</span>
 سوء استفاده کند.
 هر دو با همکاری آغاز می‌کنند، اما اگر 
-<span class="pavlov">Simpleton</span> 
+<span class="pavlov">ساده</span> 
 به اشتباه تقلب کند،‌ از آنجایی که 
-<span class="all_c">Always Cooperate</span> 
+<span class="all_c">معصوم</span> 
 هرگز تلافی نمی‌کند، 
 <i>
 او تا ابد جر خواهد زد
@@ -1273,10 +1273,10 @@ Who do you think will win now? <b>Think, then PLACE YOUR BETS:</b>
 -->
 
 ... همه چیز مانند قبل  است، تنها به جای نیمی از جمعیت 
-<span class="all_c">Always Cooperate</span>
+<span class="all_c">معصوم</span>
 باشند، 
 نیمی از جمعیت 
-<span class="all_d">Always Cheat</span>
+<span class="all_d">همیشه متقلب</span>
 است. 
 سخاوتمندی بسیار
 <i>
@@ -1317,27 +1317,27 @@ it doesn't even <i>entirely</i> wipe out <span class="tft">Copycat</span>. it sh
 In this case, a bit of "miscommunication" (5% chance of mistake each round) could lead
 to more <i>forgiveness</i>. But is this true for <i>all</i> levels...
 -->
-<span class="tf2t">Copykitten</span>
+<span class="tf2t">مقلد مهربان</span>
 برنده شد!
 و این خیلی جالب است که با وجود جمعیت آغازین
 <i>
 متخاصم‌تر
 </i>
 ،
-<span class="tf2t">Copykitten</span>
+<span class="tf2t">مقلد مهربان</span>
 که یک نسخه 
 <i>
 بخشنده‌تر
 </i> 
-<span class="tft">Copycat</span>
+<span class="tft">مقلد</span>
 ، موفق‌ترین بوده است!
 (توجه: 
-<span class="tf2t">Copykitten</span> 
+<span class="tf2t">مقلد مهربان</span> 
 اینقدر بخشنده است که حتی 
 <i>
 تمامی
 </i> 
-<span class="tft">Copycat</span>
+<span class="tft">مقلد</span>
 از میدان به در نمی‌کند. با آنها کنار می‌آید.
 )
 <br><br>
@@ -1369,7 +1369,7 @@ because at that point, <i>every</i> move is a coin flip) -->
 مقدار سوءتفاهم را تغییر بدهید و دکمه شروع را فشار دهید.
 </b>
 در ۵ درصد 
-<span class="tf2t">Copykitten</span>
+<span class="tf2t">مقلد مهربان</span>
 برنده می‌شود.
 در ۰٪، ۲۰٪ یا ۵۰٪ چه اتفاقی می‌افتد؟ 
 (این فقط تا ۵۰٪ زیاد می‌شود، برای اینکه در ۵۰٪ 
@@ -1405,17 +1405,17 @@ Let's play... -->
 <b>
 در ۰٪: 
 </b> 
-<span class="tft">Copycat</span> 
+<span class="tft">مقلد</span> 
 منصف برنده می‌شود!
 <b>
 از ۱٪ تا ۹٪:
 </b> 
-<span class="tf2t">Copykitten</span>
+<span class="tf2t">مقلد مهربان</span>
 مهربان برنده می‌شود. 
 <b>
 از ۱۰٪ تا ۴۹٪:
 </b> 
-<span class="all_d">Always Cheat</span>
+<span class="all_d">همیشه متقلب</span>
 بی‌انصاف نامهربان برنده می‌شود.
 <b>
 در ۵۰٪:
@@ -1576,7 +1576,7 @@ And let's not forget... -->
 </p>
 
 <p id="outro_1">
-If there's one big takeaway<br>
+<!-- If there's one big takeaway<br>
 from <i>all</i> of game theory, it's this:
 <br><br>
 <b>What the game is, defines what the players do.</b><br>
@@ -1591,21 +1591,50 @@ it's us players who define the game.</b>
 So, do what <i>you</i> can do, to create the conditions necessary to evolve trust.
 Build relationships. Find win-wins. Communicate clearly.
 Maybe then, we can stop firing at each other, get out of our own trenches,
-cross No Man's Land to come together...
+cross No Man's Land to come together... -->
+
+اگر 
+<i>
+همه 
+</i>
+نظریه‌بازی فقط یک پیام برای ما داشته باشد، آن پیام این است:
+<br><br>
+<b>
+اینکه بازی چه باشد، تعیین می‌کند که که بازیکن‌ها چه می‌کنند.
+</b><br>
+مسئله نبود اعتماد نیست،
+<br>
+بلکه مشکل اصلی این است که
+<i>
+محیط
+</i>
+از تکامل اعتماد جلوگیری می‌کند. 
+<br><br>
+این ممکن ساده لوحانه یا بدبینانه باشد -- اینکه ما حاصل محیطمان هستیم -- اما نظریه بازی به ما یادآوری می‌کند که ما میط یک دیگر هستیم. 
+
+<b>
+در کوتاه مدت، بازی بازیکن‌ها را تعریف می‌کند، اما در بلند مدت، این ما هستیم که بازی را تعیین می‌کنیم. 
+</b>
+<br><br>
+بنابراین، تلاش خودتان را بکنید تا شرایط تکامل اعتماد فراهم شود. 
+ارتباط برقرار کنید، موقعیت‌های برد-برد را بیابید، و در اتباطات واضح و شفاف عمل کنید. 
+شاید آن موقع بتوانیم به هم دیگر شلیک نکنیم، از سنگرها بیرون بیاییم، از سرزمین بی صاحب رد شویم و با هم باشیم...
 </p>
 
 <p id="outro_1_btn">
-and all learn...
+<!-- and all learn... --> 
+و همه یادبگیریم...
 </p>
 
 <p id="outro_2">
-...to live and let live.
+<!-- ...to live and let live. -->
+که زندگی کنیم و بگزاریم زندگی کنند.
 </p>
 
 <p id="outro_2_credits">
-"A Christmas Truce between Opposing Trenches"
+<!-- "A Christmas Truce between Opposing Trenches"
 Illustrated by AC Michael.
-Published in <i>The Illustrated London News</i>, January 9, 1915.
+Published in <i>The Illustrated London News</i>, January 9, 1915. -->
 </p>
 
 <p id="outro_2_btn">
@@ -1618,6 +1647,17 @@ Published in <i>The Illustrated London News</i>, January 9, 1915.
 
 <p id="credits">
 <span class="credits">
+
+مترجم:
+<br>
+<span class="big">حامد سیدعلائی</span><br>
+
+<a href="https://t.me/hamed_allaei" target="_blank">کانال تلگرام</a>
+<br>
+<a href="" target="_blank"> &lt;3</a>
+
+<span class="divider"></span>
+
 
 created by:<br>
 <span class="big">NICKY CASE</span><br>
@@ -1654,18 +1694,18 @@ check out
 <!-- - - - - THE PLAYERS - - - - - - -->
 <!-- - - - - - - - - - - - - - - - - -->
 
-<p id="label_tft">Copycat</p>
+<p id="label_tft">مقلد</p>
 <p id="label_short_tft">
-copycat
+مقلد
 </p>
 <p id="icon_tft">
 <span class="tft">
 	<span class="icon"></span>
-	<span class="icon_label">Copycat</span>
+	<span class="icon_label">مقلد</span>
 </span>
 </p>
 
-<p id="label_all_d">Always Cheat</p>
+<p id="label_all_d">همیشه متقلب</p>
 <p id="label_short_all_d">
 cheater
 </p>
@@ -1676,14 +1716,14 @@ cheater
 </span>
 </p>
 
-<p id="label_all_c">Always Cooperate</p>
+<p id="label_all_c">معصوم</p>
 <p id="label_short_all_c">
 cooperator
 </p>
 <p id="icon_all_c">
 <span class="all_c">
 	<span class="icon"></span>
-	<span class="icon_label">All Cooperate</span>
+	<span class="icon_label">معصوم</span>
 </span>
 </p>
 
@@ -1709,14 +1749,14 @@ cooperator
 </span>
 </p>
 
-<p id="label_tf2t">Copykitten</p>
+<p id="label_tf2t">مقلد مهربان</p>
 <p id="label_short_tf2t">
-copykitten
+مقلد مهربان
 </p>
 <p id="icon_tf2t">
 <span class="tf2t">
 	<span class="icon"></span>
-	<span class="icon_label">Copykitten</span>
+	<span class="icon_label">مقلد مهربان</span>
 </span>
 </p>
 
@@ -1731,14 +1771,14 @@ copykitten
 </span>
 </p>
 
-<p id="label_random">تصادفی</p>
+<p id="label_random">شانسی</p>
 <p id="label_short_random">
-تصادفی
+شانسی
 </p>
 <p id="icon_random">
 <span class="random">
 	<span class="icon"></span>
-	<span class="icon_label">تصادفی</span>
+	<span class="icon_label">شانسی</span>
 </span>
 </p>
 
@@ -1763,7 +1803,7 @@ Afterwards, it always plays Cheat.
 -->
 </p>
 <p id="who_prober">
-در ابتدا به این ترتیب بازی می‌کند: همکاری، تقلب، همکاری، همکاری. بعد از آن، اگر با تقلب انتقام گرفته باشی، مثل میمون مقلد بازی می‌کند. وگر نه، مثل همیشه متقلب بازی می‌کند.
+در ابتدا به این ترتیب بازی می‌کند: همکاری، تقلب، همکاری، همکاری. بعد از آن، اگر با تقلب انتقام گرفته باشی، مثل مقلد بازی می‌کند. وگر نه، مثل همیشه متقلب بازی می‌کند.
 <!-- Starts with: Cooperate, Cheat, Cooperate, Cooperate.
 Afterwards, if you ever retaliate with a Cheat, it plays like a Copycat.
 Otherwise, it plays like an Always Cheat.
