--- a/words.html
+++ b/words.html
@@ -1672,45 +1672,57 @@ Published in <i>The Illustrated London News</i>, January 9, 1915. -->
 
 <p id="credits">
 <span class="credits">
-
 مترجم:
 <br>
 <span class="big">حامد سیدعلائی</span><br>
 
-<a href="https://t.me/hamed_allaei" target="_blank">کانال تلگرام</a>
+<a href="https://t.me/hamed_allaei" target="_blank">
+Telegram: @hamed_allaei 
+</a>
 <br>
-<a href="" target="_blank"> &lt;3</a>
-
+اگر فکر می‌کنی که ترجمه این محتوی ممکن است که یک اپسیلون ایران را جای بهتری کند، 
+<br>
+<a href="https://www.payping.ir/d/8Xt2" target="_blank"> 
+به اندازه یک اپسیلون از من حمایت کن
+</a> 
+<br>
+(کارتهای عضو شتاب، بدون کسر کارمزد، حتی ۱۰۰۰ ریال هم قبول است)
 <span class="divider"></span>
 
 
-created by:<br>
+خالق:
+<br>
 <span class="big">NICKY CASE</span><br>
-<a href="http://ncase.me/" target="_blank">play my other shtuff</a>
+<a href="http://ncase.me/" target="_blank">کارهای دیگر</a>
 •
-<a href="https://twitter.com/ncasenmare" target="_blank">follow my tweeter</a>
+<a href="https://twitter.com/ncasenmare" target="_blank">توئیتر</a>
+•
+<a href="https://github.com/ncase/trust/#play-it-here-httpncasemetrust" target="_blank">گیت‌هاب</a>
+
+<span class="divider"></span>
+
+براساس کتاب رابرت اکسلرود (۱۹۸۴)،
 <br>
-<a href="https://github.com/ncase/trust/#play-it-here-httpncasemetrust" target="_blank">download the music &amp; source code</a>
+<span class="big">
+«تکامل همکاری»
+</span><br>
+<a href="notes" target="_blank">یادداشت خالق اثر در باره این بازی</a>
+(ترجمه بشود ...)
 
 <span class="divider"></span>
-
-based off robert axelrod's 1984 book,<br>
-<span class="big">"THE EVOLUTION OF COOPERATION"</span><br>
-<a href="notes" target="_blank">read my footnotes for this game</a>
-
-<span class="divider"></span>
-
-lots of love and thanks to<br>
-<span class="big">MY PATREON SUPPORTERS</span><br>
-<a href="peeps" target="_blank">see my drawings of 'em</a>
+خالق اثر از حامیانش در پاترون تشکر می‌کند
+<br>
+<a href="peeps" target="_blank">
+نقاشی‌هایشان را ببینید!
+</a>
 •
-<a href="https://www.patreon.com/ncase" target="_blank">throw coins at me on patreon &lt;3</a>
-
+<a href="https://www.patreon.com/ncase" target="_blank">
+حمایت مالی از خالق </a>
+(به دلار)
 <span class="divider"></span>
-
-p.s: want more learning-by-playing?<br>
-check out 
-<a href="http://explorabl.es/" target="_blank">explorable explanations</a>!
+باز هم از اینها (به انگلیسی)
+<br>
+<a href="http://explorabl.es/" target="_blank">explorable explanations</a>
 
 </span>
 </p>
