Changed to Koodak font.

--- a/words.html
+++ b/words.html
@@ -1907,7 +1907,7 @@ But if you cheated in last round, it switches its last move (even if it was an a
 </p>
 
 <p id="label_payoffs">
-نتیجه نهایی
+پرداخت‌ها
 </p>
 
 <p id="label_rules">
