--- a/words.html
+++ b/words.html
@@ -102,7 +102,7 @@ PLAY &rarr;
 
 <p id="intro">
 در اوج جنگ جهانی اول، اتفاق جالبی رخ می‌دهد ...
-<br><br>
+<br>
 <!--
 It was Christmas 1914 on the Western Front.<br>
 Despite strict orders <i>not</i> to chillax with the enemy, British<br>
@@ -117,7 +117,7 @@ and gathered to bury their dead, exchange gifts, and play games.
 از زمین بی صاحب رد می‌شوند، اجساد همرزمانشان را دفن می‌کنند، 
 <br>
 به هم هدیه می‌دهند و به بازی و شادی مشغول می‌شوند. 
-<br><br>
+<br>
 <!--
 Meanwhile: it's 2017, the West has been at peace for decades, and<br>
 wow, we <i>suck</i> at trust. Surveys show that, over the past forty years,
@@ -129,14 +129,14 @@ fewer and fewer people say they trust each other. So here's our puzzle:
 از اعتماد خبری نیست. 
 <br>
 نظر سنجی‌ها نشان می‌دهند که در ۴۰ سال گذشته، آدمها کمتر و کمتر به هم اعتماد می‌کنند. معما این است:
-<br><br>
+<br>
 <!--
 <b>Why, even in peacetime, do friends become enemies?<br>
 And why, even in wartime, do enemies become friends?</b>
 -->
 چرا در زمان صلح، دوستان دشمنی می‌کنند؟ <br>
 و چرا در زمان جنگ، دشمنان دوست هم می‌شوند؟
-<br><br>
+<br>
 <!--
 I think <b>game theory</b> can help explain our epidemic of distrust –<br>
 and how we can fix it! So, to understand all this...
@@ -367,7 +367,7 @@ Pick your first, <i>real</i> move. <b>Choose wisely.</b> -->
 
 <p id="character_all_c">
 <b>معصوم:</b>
-بیا دوست باشیم! &lt;3
+بچه‌ها بیا با هم دوست باشیم!
 </p>
 
 <p id="character_grudge">
@@ -1663,7 +1663,7 @@ Published in <i>The Illustrated London News</i>, January 9, 1915. -->
 </p>
 
 <p id="outro_2_btn">
-&lt;3
+3&gt;
 </p>
 
 <!-- - - - - - - - - - - - - - - - - -->
@@ -1686,7 +1686,6 @@ Telegram: @hamed_allaei
 به اندازه یک اپسیلون از من حمایت کن
 </a> 
 <br>
-(کارتهای عضو شتاب، بدون کسر کارمزد، حتی ۱۰۰۰ ریال هم قبول است)
 <span class="divider"></span>
 
 
@@ -1744,7 +1743,7 @@ Telegram: @hamed_allaei
 
 <p id="label_all_d">همیشه متقلب</p>
 <p id="label_short_all_d">
-cheater
+متقلب
 </p>
 <p id="icon_all_d">
 <span class="all_d">
@@ -1755,7 +1754,7 @@ cheater
 
 <p id="label_all_c">معصوم</p>
 <p id="label_short_all_c">
-cooperator
+معصوم
 </p>
 <p id="icon_all_c">
 <span class="all_c">
