--- a/words.html
+++ b/words.html
@@ -51,7 +51,7 @@ Thanks again!
 چرا و چگونه به هم اعتماد می‌کنیم؟ یک راهنمای تعاملی بر اساس نظریه بازی
 </p>
 <p id="meta_loading">
-Loading ...
+بارگزاری ...
 </p>
 <p id="meta_on">
 روشن
@@ -90,10 +90,11 @@ nicky case, تیر ۱۳۹۶
 </p>
 
 <p id="loading">
-Loading ...
+بارگزاری ...
 </p>
 <p id="loading_done">
-PLAY &rarr;
+شروع
+&larr;
 </p>
 
 <!-- - - - - - - - - - - - - - - - - -->
@@ -1683,9 +1684,10 @@ Telegram: @hamed_allaei
 اگر فکر می‌کنی که ترجمه این محتوی ممکن است که یک اپسیلون ایران را جای بهتری کند، 
 <br>
 <a href="https://www.payping.ir/d/8Xt2" target="_blank"> 
-به اندازه یک اپسیلون از من حمایت کن
+به اندازه اپسیلون ﷼ از من حمایت کن
 </a> 
 <br>
+
 <span class="divider"></span>
 
 
