fixed link for sharing.

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ Many thanks again!
 	<!-- TO TRANSLATE: "name", "description" -->
 	<meta itemprop="name" content="تکامل اعتماد">
 	<meta itemprop="description" content="یک راهنمای تعاملی برای نظریه بازی درباره اینکه چرا به یکدیگر اعتماد می‌کنیم">
-	<meta itemprop="image" content="http://ncase.me/trust/social/thumbnail.png">
+	<meta itemprop="image" content="http://hamed.github.io/trust/social/thumbnail.png">
 
 	<!-- TO TRANSLATE: "name", "description" -->
 	<meta name="twitter:card" content="summary_large_image">
@@ -45,13 +45,13 @@ Many thanks again!
 	<meta name="twitter:title" content="تکامل اعتماد">
 	<meta name="twitter:description" content="یک راهنمای تعاملی برای نظریه بازی درباره اینکه چرا به یکدیگر اعتماد می‌کنیم">
 	<meta name="twitter:creator" content="@ncasenmare">
-	<meta name="twitter:image" content="http://ncase.me/trust/social/thumbnail.png">
+	<meta name="twitter:image" content="http://hamed.github.io/trust/social/thumbnail.png">
 
 	<!-- TO TRANSLATE: "name", "description" -->
 	<meta property="og:title" content="تکامل اعتماد">
 	<meta property="og:type" content="website">
 	<meta property="og:url" content="http://ncase.me/trust/">
-	<meta property="og:image" content="http://ncase.me/trust/social/thumbnail.png">
+	<meta property="og:image" content="http://hamed.github.io/trust/social/thumbnail.png">
 	<meta property="og:description" content="یک راهنمای تعاملی برای نظریه بازی درباره اینکه چرا به یکدیگر اعتماد می‌کنیم">
 
 	<!-- Styles -->
@@ -79,7 +79,7 @@ Many thanks again!
 		<!-- Also, "link" will be changed later to whatever the link for the translated version will be. -->
 		<sharing title="تکامل اعتماد"
 				 text="چرا آدمها کمتر به هم اعتماد می‌کنند؟ راه چاره چیست؟ راهنمای تعاملی اعتماد در نظریه بازی:"
-				 link="http://ncase.me/trust/"></sharing>
+				 link="http://hamed.github.io/trust/"></sharing>
 
 	</div>
 <script>
