change in donor text.

--- a/words.html
+++ b/words.html
@@ -1684,10 +1684,11 @@ Telegram: @hamed_allaei
 اگر فکر می‌کنی که ترجمه این محتوی ممکن است که یک اپسیلون ایران را جای بهتری کند، 
 <br>
 <a href="https://www.payping.ir/d/8Xt2" target="_blank"> 
-به اندازه اپسیلون ﷼ از من حمایت کن
+به اندازه اپسیلون ﷼ از من حمایت کن.
 </a> 
 <br>
-
+از اولین، بیشترین و کمترین حمایت در اینجا تشکر خواهم کرد (در صورت رضایت). مقداری از این مبلغ را هم به دست خالق اثر می‌رسانم.
+<br>
 <span class="divider"></span>
 
 
