minor edit in donor

--- a/words.html
+++ b/words.html
@@ -1687,7 +1687,7 @@ Telegram: @hamed_allaei
 به اندازه اپسیلون ﷼ از من حمایت کن.
 </a> 
 <br>
-از اولین، بیشترین و کمترین حمایت در اینجا تشکر خواهم کرد (در صورت رضایت). مقداری از این مبلغ را هم به دست خالق اثر می‌رسانم.
+در صورت رضایت، از اولین، بیشترین و کمترین حمایت در اینجا تشکر خواهم کرد. مقداری از این مبلغ را هم به دست خالق اثر می‌رسانم.
 <br>
 <span class="divider"></span>
 
