--- a/words.html
+++ b/words.html
@@ -111,7 +111,7 @@ and German soldiers left their trenches, crossed No Man's Land,<br>
 and gathered to bury their dead, exchange gifts, and play games.
 <br><br>
 -->
-کریسمس سال ۱۹۱۴، در جبه غربی (مرز آلمان و فرانسه)، 
+کریسمس سال ۱۹۱۴، در جبهه غربی (مرز آلمان و فرانسه)، 
 <br>
 سربازان انگلیسی و آلمانی بر خلاف دستورات موکد سنگر‌هایشان را ترک می‌کنند، 
 <br>
@@ -196,9 +196,9 @@ You both can either choose to COOPERATE (put in coin), or CHEAT (don't put in co
 <!-- <b>Let's say the other player cheats, and doesn't put in a coin.</b><br>
 What should you do?
 -->
-اگر بازیکن 
+اگر بازیکن دیگر 
 <b>
-تقلب کند دیگر سکه‌ای داخل دستگاه نیاندازد، 
+تقلب کند و سکه‌ای داخل دستگاه نیاندازد، 
 </b>
 تو چه می‌کنی؟
 </p>
@@ -1066,7 +1066,7 @@ let's now look at our third &amp; final barrier to the evolution of trust... -->
 </p>
 <p id="distrust_5_btn">
 <s>
-اشتباهات
+اشتاهات
 </s> 
 اشتباهات. 
 &larr;
