fixed some typos
گذاشتن به معنی اجازه دادن با دال‌ذال است و بارگذاری به معنی دانلود نیز همینطور

--- a/words.html
+++ b/words.html
@@ -51,7 +51,7 @@ Thanks again!
 چرا و چگونه به هم اعتماد می‌کنیم؟ یک راهنمای تعاملی بر اساس نظریه بازی
 </p>
 <p id="meta_loading">
-بارگزاری ...
+بارگذاری...
 </p>
 <p id="meta_on">
 روشن
@@ -90,7 +90,7 @@ nicky case, تیر ۱۳۹۶
 </p>
 
 <p id="loading">
-بارگزاری ...
+بارگذاری...
 </p>
 <p id="loading_done">
 شروع
@@ -1654,7 +1654,7 @@ cross No Man's Land to come together... -->
 
 <p id="outro_2">
 <!-- ...to live and let live. -->
-که زندگی کنیم و بگزاریم زندگی کنند.
+که زندگی کنیم و بگذاریم زندگی کنند.
 </p>
 
 <p id="outro_2_credits">
