added my instagram

--- a/words.html
+++ b/words.html
@@ -1680,6 +1680,10 @@ Published in <i>The Illustrated London News</i>, January 9, 1915. -->
 <a href="https://t.me/hamed_allaei" target="_blank">
 Telegram: @hamed_allaei 
 </a>
+
+<a href="https://www.instagram.com/hamed.allaei/" target="_blank">
+Instagram: @hamed.allaei 
+</a>
 <br>
 اگر فکر می‌کنی که ترجمه این محتوی ممکن است که یک اپسیلون ایران را جای بهتری کند، 
 <br>
