--- a/words.html
+++ b/words.html
@@ -1680,7 +1680,7 @@ Published in <i>The Illustrated London News</i>, January 9, 1915. -->
 <a href="https://t.me/hamed_allaei" target="_blank">
 Telegram: @hamed_allaei 
 </a>
-
+•
 <a href="https://www.instagram.com/hamed.allaei/" target="_blank">
 Instagram: @hamed.allaei 
 </a>
@@ -1691,7 +1691,10 @@ Instagram: @hamed.allaei
 به اندازه اپسیلون ﷼ از من حمایت کن.
 </a> 
 <br>
+دقت کنید که مبلغ به تومان است!
+<!--
 در صورت رضایت، از اولین، بیشترین و کمترین حمایت در اینجا تشکر خواهم کرد. مقداری از این مبلغ را هم به دست خالق اثر می‌رسانم.
+-->
 <br>
 <span class="divider"></span>
 
