translating the note.

--- a/notes/index.html
+++ b/notes/index.html
@@ -8,7 +8,7 @@ So, it's optional to translate these!
 -->
 
 <!DOCTYPE html>
-<html>
+<html lang="fa" dir="rtl">
 
 <head>
 
@@ -23,27 +23,93 @@ So, it's optional to translate these!
 <body>
 <div id="notes">
 
-<h1>NOTES:</h1>
+<h1>
+یادداشت (خالق اثر):
+</h1>
 
-<h3>"The Evolution of Trust"</h3>
+<h3>
+«تکامل اعتماد»
+</h3>
 
-<p>This interactive guide is heavily based off Robert Axelrod's groundbreaking 1984 book, <a href="https://www.amazon.com/Evolution-Cooperation-Revised-Robert-Axelrod/dp/0465005640">The Evolution of Cooperation</a>! I was also heavily inspired by his 1997 sequel, <a href="http://press.princeton.edu/titles/6144.html">The Complexity of Cooperation</a>, and Robert Putnam's 2000 book on America's declining "social capital", <a href="http://bowlingalone.com/">Bowling Alone</a>.</p>
+<p>
 
-<p>yes i'm a bookworm nerd, plz don't bully me</p>
 
-<h3>"Fewer and fewer people say they trust each other"</h3>
+<!-- This interactive guide is heavily based off Robert Axelrod's groundbreaking 1984 book, 
+<a href="https://www.amazon.com/Evolution-Cooperation-Revised-Robert-Axelrod/dp/0465005640">The Evolution of Cooperation</a>! 
+I was also heavily inspired by his 1997 sequel, <a href="http://press.princeton.edu/titles/6144.html">The Complexity of Cooperation</a>, 
+and Robert Putnam's 2000 book on America's declining "social capital", <a href="http://bowlingalone.com/">Bowling Alone</a>.
+-->
+این راهنمای تعاملی را بر پایه کتاب پیشگامانه رابرت اکسلرود، 
+<a href="https://www.amazon.com/Evolution-Cooperation-Revised-Robert-Axelrod/dp/0465005640">
+تکامل همکاری
+</a>
+ساخته‌ام. 
+همینطور از کتاب ۱۹۹۷‌ همین نویسنده، 
+<a href="http://press.princeton.edu/titles/6144.html">
+پیچیدگی همکاری
+</a> 
+و کتاب رابرت پوتنام در باره افول «سرمایه اجتماعی» آمریکا،
+<a href="http://bowlingalone.com/">
+بولینگ به تنهایی
+</a>
+الهام گرفته‌ام.
+</p>
 
-<p>To see a thorough statistical take on this, check out <a href="https://ourworldindata.org/trust">Our World In Data</a>. Mmmm stats</p>
+<p>
+<!-- yes i'm a bookworm nerd, plz don't bully me
+-->
+من یک خرخون غیر اجتماعی هستم، لطفاً من را اذیت نکنید
+</p>
 
-<h3>"The Game of Trust"</h3>
+<h3>
+<!-- "Fewer and fewer people say they trust each other" -->
+«آدمهای کمتر و کمتری اعتراف می‌کنند که به یک دیگر اعتماد دارند.
+</h3>
 
-<p>This game is also known in game theory as the infamous <em>Prisoner's Dilemma</em>. The Prisoner's Dilemma is named after a story where two suspects can either squeal on their partner-in-crime ("cheat"), or stay silent ("cooperate"). I chose not to do this story because 1) in this case, both players "cooperating" would be bad for society, and 2) it's unrealistic, everyone knows that snitches get stitches</p>
+<p>
+<!-- To see a thorough statistical take on this, check out <a href="https://ourworldindata.org/trust">Our World In Data</a>. Mmmm stats -->
+برای اینکه آمار دقیقی از این موضوع داشته باشی، یک نگاهی به 
+<a href="https://ourworldindata.org/trust">
+Our World In Data
+</a>
+بیانداز. بله، آمار ...
+</p>
 
-<h3>"You won't know in advance when the last round is"</h3>
+<h3>
+<!-- "The Game of Trust" -->
+«بازی اعتماد»
+</h3>
 
-<p>In the repeated game of trust (also known as <em>Iterated Prisoner's Dilemma</em>), it's important that neither player knows <em>when</em> the last round is. Why? Think about it - on the last round, both players would know their action has no consequence, so they'd both cheat. But that means in the second-last round, their actions can't change the next round, so they'd also both cheat. But that means in the third-last round... etc etc.</p>
+<p>
 
-<h3>"Copycat"</h3>
+<!-- This game is also known in game theory as the infamous <em>Prisoner's Dilemma</em>. The Prisoner's Dilemma is named after a story where two suspects can either squeal on their partner-in-crime ("cheat"), or stay silent ("cooperate"). I chose not to do this story because 1) in this case, both players "cooperating" would be bad for society, and 2) it's unrealistic, everyone knows that snitches get stitches -->
+
+این بازی در نظریه بازی به عنوان 
+<em>
+معضل زندانی 
+</em>
+شناخته می‌شود. داستان از آنجایی آغاز می‌شود که دو مظنون به ارتکاب جرم می‌توانند به یکدیگر را لو بدهند ("تقلب کنند") یا ساکت بمانند ("همکاری کنند"). من به دو علت تصمیم گرفتم که از این داستان استفاده نکنم 
+۱) در این مثال «همکاری» دو بازیکن برای جامعه بد است، و 
+۲) غیر  واقعی است، خبرچین پایش را از زندان بیرون بگذارد دخلش آمده!
+
+
+</p>
+
+<h3> 
+<!-- "You won't know in advance when the last round is" -->
+«پیشاپیش نمی‌دانید که دور آخر کی است»
+</h3>
+
+<p>
+<!--In the repeated game of trust (also known as <em>Iterated Prisoner's Dilemma</em>), it's important that neither player knows <em>when</em> the last round is. Why? Think about it - on the last round, both players would know their action has no consequence, so they'd both cheat. But that means in the second-last round, their actions can't change the next round, so they'd also both cheat. But that means in the third-last round... etc etc. -->
+
+در بازی مکرر اعتماد، این مهم است که هیچکدام از بازیکن‌ها نداند که کی دور آخر است. چرا؟ فکر کن - در دور آخر، هر دو می‌دانند که عملشان هیچ پیامدی ندارد، برای همین هر دو تقلب می‌کنند. این به این معنی است که در دور ماقبل آخر هر دو می‌دانند که عملشان نمی‌تواند نتیجه دور بعدش را تغییر بدهد، پس باز هم هر دو تقلب می‌کنند. در دو دور مانده به دور آخر...
+</p>
+
+<h3>
+<!-- "Copycat"-->
+«متقلب»
+</h3>
 
 <p>This strategy is better known in game theory as <em>Tit For Tat</em>. It was created by Anatol Rapoport in 1980, for Robert Axelrod's game theory tournament. I chose not to use the name "Tit For Tat" because 1) it <em>sounds</em> mean, although it's a nice &amp; fair strategy, and 2) a lot of the public have already heard about Tit For Tat, so if I used that name, players might just place their bets on this character because they've already heard of "Tit For Tat".</p>
 
