translating the note.

--- a/notes/index.html
+++ b/notes/index.html
@@ -63,7 +63,7 @@ and Robert Putnam's 2000 book on America's declining "social capital", <a href="
 
 <h3>
 <!-- "Fewer and fewer people say they trust each other" -->
-«آدمهای کمتر و کمتری اعتراف می‌کنند که به یک دیگر اعتماد دارند.
+«آدمهای کمتر و کمتری اعتراف می‌کنند که به یک دیگر اعتماد دارند»
 </h3>
 
 <p>
@@ -108,10 +108,20 @@ Our World In Data
 
 <h3>
 <!-- "Copycat"-->
-«متقلب»
+«مقلد»
 </h3>
 
-<p>This strategy is better known in game theory as <em>Tit For Tat</em>. It was created by Anatol Rapoport in 1980, for Robert Axelrod's game theory tournament. I chose not to use the name "Tit For Tat" because 1) it <em>sounds</em> mean, although it's a nice &amp; fair strategy, and 2) a lot of the public have already heard about Tit For Tat, so if I used that name, players might just place their bets on this character because they've already heard of "Tit For Tat".</p>
+<p>
+<!-- This strategy is better known in game theory as <em>Tit For Tat</em>. It was created by Anatol Rapoport in 1980, for Robert Axelrod's game theory tournament. I chose not to use the name "Tit For Tat" because 1) it <em>sounds</em> mean, although it's a nice &amp; fair strategy, and 2) a lot of the public have already heard about Tit For Tat, so if I used that name, players might just place their bets on this character because they've already heard of "Tit For Tat". -->
+
+این استراتژی در نظریه بازی به 
+<em>
+این به آن در
+</em>
+معروف است. آناتول راپاپورت در سال ۱۹۸۰ برای شرکت در مسابقه نظریه بازی رابرت اکسلرود آنرا اختراع کرد. من تصمیم گرفتم که از این اسم استفاده نکنم به این خاطر که 
+۱) به نظر بدجنسی می‌رسد، هرچند که خوب و جوانمردانه است، و 
+۲) خیلی‌ها درباره‌اش شنیده‌اند، و اگر من آنرا استفاده می‌کردم، همه شرطشان را روی آن می‌بستند به این خاطر که جایی درباره «این به آن در» شنیده بودند. 
+</p>
 
 <h3>"You may be skeptical about the Christmas Truce"</h3>
 
