translating the note.

--- a/notes/index.html
+++ b/notes/index.html
@@ -123,17 +123,43 @@ Our World In Data
 ۲) خیلی‌ها درباره‌اش شنیده‌اند، و اگر من آنرا استفاده می‌کردم، همه شرطشان را روی آن می‌بستند به این خاطر که جایی درباره «این به آن در» شنیده بودند. 
 </p>
 
-<h3>"You may be skeptical about the Christmas Truce"</h3>
+<h3>
+<!-- "You may be skeptical about the Christmas Truce"-->
+«ممکن به آتش بس کریسمس شک داشته باشی»
+</h3>
 
-<p>There was another guy who was skeptical, too. During the truce, a German corporal remarked with disgust, <a href="http://time.com/3643889/christmas-truce-1914/">"Such a thing should not happen in wartime. Have you no German sense of honor?"</a></p>
+<p>
+<!-- There was another guy who was skeptical, too. During the truce, a German corporal remarked with disgust, 
+<a href="http://time.com/3643889/christmas-truce-1914/">"Such a thing should not happen in wartime. Have you no German sense of honor?"-->
+یک نفر دیگر هم بود که شک داشت. در میانه آتش بس، یک سرجوخه آلمانی با انزجار تذکر داد که، 
+<a href="http://time.com/3643889/christmas-truce-1914/">
+«در زمان جنگ چنین چیزی نباید اتفاق بیافتد. غیرت آلمانیتان کجاست؟»
+</a></p>
 
-<p>That man was Adolf Hitler.</p>
+<p>
+<!-- That man was Adolf Hitler.-->
+او آدولف هیتلر بود.
+</p>
 
-<p>You can't make this sh*t up.</p>
+<p>
+<!-- You can't make this sh*t up. -->
+این چیزها را آدم از خودش نمی‌تواند در بیاورد. 
+</p>
 
-<h3>"For culture to evolve"</h3>
+<h3>
+<!-- "For culture to evolve" -->
+برای تحول فرهنگ
+</h3>
 
-<p>There's a new, super-young interdisciplinary field that I'm really <em>excited</em> by, called <em>Cultural Evolution</em>. Admittedly, it's a bad name, not least because it sounds uncomfortably close to "Social Darwinism". Which it's not. Pinky promise.</p>
+<p>
+
+<!-- There's a new, super-young interdisciplinary field that I'm really <em>excited</em> by, called <em>Cultural Evolution</em>. Admittedly, it's a bad name, not least because it sounds uncomfortably close to "Social Darwinism". Which it's not. Pinky promise. -->
+یک رشته جدید میان‌رشته‌ای وجود دارد که شدیداً مرا هیجان زده می‌کند. 
+<em>
+تکامل فرهنگ
+</em>
+نام خوبی نیست، به این خاطر که آدم را به یاد «داروینیسم اجتماعی» می‌اندازد، که البته ربطی به آن ندارد.
+</p>
 
 <p>One core part of Cultural Evolution Theory is culture evolves the same way life does: through variation &amp; selection. Variation: people differ in beliefs &amp; behaviors, and invent new ones almost every day. Selection: people try to imitate their heroes &amp; elders, and adopt their beliefs/behaviors.</p>
 
