translating the note.

--- a/notes/index.html
+++ b/notes/index.html
@@ -97,7 +97,7 @@ Our World In Data
 
 <h3> 
 <!-- "You won't know in advance when the last round is" -->
-«پیشاپیش نمی‌دانید که دور آخر کی است»
+«پیشاپیش نمی‌دانید که کی دور آخر کی است»
 </h3>
 
 <p>
@@ -156,12 +156,18 @@ Our World In Data
 <!-- There's a new, super-young interdisciplinary field that I'm really <em>excited</em> by, called <em>Cultural Evolution</em>. Admittedly, it's a bad name, not least because it sounds uncomfortably close to "Social Darwinism". Which it's not. Pinky promise. -->
 یک رشته جدید میان‌رشته‌ای وجود دارد که شدیداً مرا هیجان زده می‌کند. 
 <em>
-تکامل فرهنگ
+تکامل فرهنگی
 </em>
 نام خوبی نیست، به این خاطر که آدم را به یاد «داروینیسم اجتماعی» می‌اندازد، که البته ربطی به آن ندارد.
 </p>
 
-<p>One core part of Cultural Evolution Theory is culture evolves the same way life does: through variation &amp; selection. Variation: people differ in beliefs &amp; behaviors, and invent new ones almost every day. Selection: people try to imitate their heroes &amp; elders, and adopt their beliefs/behaviors.</p>
+<p>
+<!-- One core part of Cultural Evolution Theory is culture evolves the same way life does: through variation &amp; selection. Variation: people differ in beliefs &amp; behaviors, and invent new ones almost every day. Selection: people try to imitate their heroes &amp; elders, and adopt their beliefs/behaviors.
+-->
+شالوده اصلی نظریه تکامل فرهنگی این است که فرهنگ هم مانند حیاط به وسیله گوناگونی و انتخاب تحول پیدا می‌کند.
+گوناگونی: مردم باورها و رفتارهای مختلفی دارند که هر روز هم به آنها اضافه می‌شود. 
+انتخاب: مردم سعی می‌کنند از قهرمانان و بزرگان پیروی کنند و رفتار و باورهای آنها را اختیار کنند.
+</p>
 
 <p>(Note: this is <em>not</em> quite Richard Dawkin's "meme" theory. "Meme" implies, that, like genes, ideas come in discrete chunks &amp; replicate with high fidelity. This is obviously untrue. Also you can't say "meme" with a straight face these days, so whatever)</p>
 
